--- a/module/scripts/dialogs/crowdflower-job-columns-dialog.html
+++ b/module/scripts/dialogs/crowdflower-job-columns-dialog.html
@@ -14,23 +14,27 @@
 		<div class="job-box">
 		  <h2>New job details</h2>
 		  
-		  <div class=Ófield_containerÓ>
+		  <div class="field_container">
 		  	<label>Title: </label><input bind="jobTitle" class="job-title" id="jobTitle" />
-		  			
+		  	<span id="title-warning">Job title should be 5-255 characters long.</span>
 		  </div>
-		 <div class=Ófield_containerÓ>
+		 <div class="field_container">
 		 	<label>Instructions: </label><textarea bind="jobInstructions" class="job-instructions"></textarea>
+		 	<span id="instructions-warning">Instructions should not be empty.</span>
 		 </div>
-		 <div class=Ófield_containerÓ>
+		 <div class="field_container">
 		 	<label>Upload data: </label><input type="checkbox" bind="chkUploadToNewJob"/>
 		 </div>
 		</div>  		  
-		<div id="columns" bind="columnsPanel" class="job-box">
-			<h3>Columns to upload </h3>
-			<div bind="allColumns" id="all-columns"></div>
+		<div id="columns" bind="columnsPanel" class="job-box wrapper">
+			<div class="column-left">
+			<h3>Columns to upload (scroll right for more) </h3>
+			<div bind="allColumns" id="columns-menu"></div>
 			<div bind="columnList" id="project-columns"></div>
-			<h3>CML preview panel</h3>
-			<div bind="cmlPreviewPanel" id="cmlPreviewPanel">
+			</div>
+			<div class="column-right">
+			<h3>Generated default CML</h3>
+			<div bind="cmlPreviewPanel" id="cmlPreviewPanel"></div>
 			</div>
 		</div>
 	</div>
@@ -43,7 +47,7 @@
     <div class="wrapper">
 	<div class="column-left">
 		<h2>Existing jobs</h2>
-		<div class=Ófield_containerÓ><label>Select existing job:</label>
+		<div class="field_container"><label>Select existing job:</label>
     		<div id="job-list" bind="jobList">
     		<select id="all-jobs" bind="allJobsList"></select>
     		</div>
@@ -53,7 +57,7 @@
     	</div>
     <div class="column-right">
     	<h3>Copy job</h3>
-    	<div class=Ófield_containerÓ>
+    	<div class="field_container">
 		  	<label>Copy golden data to new job? </label>
 		  	<input type="checkbox" value="copy-gold" bind="copyJobGold"/>
 		</div>
