--- a/module/scripts/dialogs/crowdflower-create-gold-dialog.html
+++ b/module/scripts/dialogs/crowdflower-create-gold-dialog.html
@@ -14,14 +14,14 @@
 		<div class="job-box">
 		  <h2>New job details</h2>
 		  
-		  <div class=Ófield_containerÓ>
+		  <div class="field_container">
 		  	<label>Title: </label><input bind="jobTitle" class="job-title" id="jobTitle" />
 		  			
 		  </div>
-		 <div class=Ófield_containerÓ>
+		 <div class="field_container">
 		 	<label>Instructions: </label><textarea bind="jobInstructions" class="job-instructions"></textarea>
 		 </div>
-		 <div class=Ófield_containerÓ>
+		 <div class="field_container">
 		 	<label>Upload data: </label><input type="checkbox" bind="chkUploadToNewJob"/>
 		 </div>
 		</div>  		  
@@ -39,7 +39,7 @@
     <div id="update-gold" bind="updateGoldTab">
     <div class="job-box">
 		<h2>Existing jobs</h2>
-		<div class=Ófield_containerÓ><label>Select existing job:</label>
+		<div class="field_container"><label>Select existing job:</label>
     		<div id="job-list" bind="jobList">
     		<select id="all-jobs" bind="allJobsList"></select>
     		</div>
@@ -70,7 +70,7 @@
 	</div>
    	<div class="job-box">
 		<h2>Copy job</h2>
-    	<div class=Ófield_containerÓ>
+    	<div class="field_container">
 		  	<label>Copy golden data to new job? </label>
 		  	<input type="checkbox" value="copy-gold" bind="copyJobGold"/>
 		</div>
