Updated uploading to templated job

--- a/module/scripts/dialogs/crowdflower-job-columns-dialog.html
+++ b/module/scripts/dialogs/crowdflower-job-columns-dialog.html
@@ -116,7 +116,7 @@
 		</div> <!-- .job-box -->
 		<div class="job-box" bind="extFieldsPanel" id="existing-fields-panel">
 	    		<h3>Map existing CrowdFlower fields to column names</h3>    	
-	    		<div bind="extJobFields"></div>
+	    		<div bind="extJobFields" class="project-columns"></div>
 	    	<div id="existing-columns-panel" bind="extColumnsPanel">
 		    	<h3>Select columns to upload</h3>    		
 		    	<div bind="extColumns" id="existing-columns">
