--- a/module/scripts/dialogs/crowdflower-job-columns-dialog.html
+++ b/module/scripts/dialogs/crowdflower-job-columns-dialog.html
@@ -3,7 +3,7 @@
   <div class="dialog-body" bind="dialogBody">
     <div class="grid-layout layout-normal layout-full" style="height:400px;overflow:auto">
   
-    <div class="refine-tabs" bind="jobTabs" id="jobTabs">
+    <div class="refine-tabs ui-tabs ui-tabs-nav" bind="jobTabs" id="jobTabs">
     <ul>
     	<li><a href="#new-job-tab">Create new job</a></li>
     	<li><a href="#existing-job-tab">Upload to existing job</a></li>
@@ -36,6 +36,7 @@
     		<option id="blank" value="blank">--- no template ---</option>
     		<option id="freebase" value="freebase">Freebase reconciliation</option>
     		<option id="dbpedia" value="dbpedia" >DBpedia reconciliation</option>
+            <option id="img_recon" value="img_recon" >Image reconciliation</option>
     		</select>
     		<span class="warning">Choose one of templates or enter your data in New job details</span>	    		
 		</div><!-- .field-container -->	
