Added loading templates from files

--- a/module/scripts/dialogs/crowdflower-job-columns-dialog.html
+++ b/module/scripts/dialogs/crowdflower-job-columns-dialog.html
@@ -1,4 +1,4 @@
-<div class="dialog-frame" style="width: 800px;">
+<div class="dialog-frame" id="refine-dialog" style="width: 800px;">
     <div class="dialog-header" bind="dialogHeader"></div>
     <div class="dialog-body" bind="dialogBody">
         <div class="grid-layout layout-normal layout-full"
@@ -66,7 +66,7 @@
                                 <input type="button"
                                     value="Load template"
                                     bind="buttonLoadTemplate"
-                                    class="btn btn-danger">
+                                    class="btn btn-inverse btn-small">
                                     &nbsp;&nbsp;                                    
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                             <input type="button"
                                     value="Preview template"
                                     bind="buttonPreviewTemplate"
-                                    class="btn btn-info">
+                                    class="btn btn-info btn-small">
                             </div>
 
                             <div class="field-container"
