Fixed error messaging

--- a/module/scripts/dialogs/crowdflower-eval-recon-dialog.html
+++ b/module/scripts/dialogs/crowdflower-eval-recon-dialog.html
@@ -90,8 +90,8 @@
   </div><!-- ./grid -->  		     
     </div><!-- ./dialog-bodyr -->
   <div class="dialog-footer" bind="dialogFooter">
-    <div id="status-message" bind="statusMessage">
-    Status: 
+    <div id="msg-frame">
+        <p id="status-message" bind="statusMessage"></p>
     </div>
     
     <button class="btn btn-success" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
