Added init message

--- a/module/scripts/dialogs/crowdflower-job-columns-dialog.html
+++ b/module/scripts/dialogs/crowdflower-job-columns-dialog.html
@@ -7,11 +7,9 @@
             <div class="refine-tabs" bind="jobTabs" id="jobTabs">
                 <ul>
                     <li><a href="#new-job-tab">Create new job</a></li>
-                    <li><a href="#existing-job-tab">Upload to
-                            existing job</a></li>
+                    <li><a href="#existing-job-tab">Upload to existing job</a></li>
                 </ul>
                 <div class="panels-area">
-
                     <div id="new-job-tab" bind="newJobTab">
                         <div class="options-menu">
                             <ul>
